deploy/2_deployment/5_hoshi-gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoshi-gateway
  namespace: hoshi-note
  labels:
    app: hoshi-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoshi-gateway
  template:
    metadata:
      name: hoshi-gateway
      labels:
        app: hoshi-gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8000"
    spec:
      serviceAccountName: hoshi-note
      containers:
        - name: hoshi-gateway
          image: ghcr.io/syfxlin/hoshi-note:latest
          imagePullPolicy: IfNotPresent
          command:
            - java
            - -jar
            - /app/hoshi-gateway-1.0-SNAPSHOT.jar
          ports:
            - name: hoshi-gateway
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /actuator/health/liveness
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              port: 8000
              path: /actuator/health/readiness
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hoshi-gateway
  namespace: hoshi-note
spec:
  selector:
    app: hoshi-gateway
  ports:
    - name: hoshi-gateway
      port: 8000
      nodePort: 30900
  type: NodePort
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hoshi-gateway
  namespace: hoshi-note
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.hoshi-note.ixk.me`)
      services:
        - name: hoshi-gateway
          namespace: hoshi-note
          port: 8000
